Fix wrapping chip container

--- a/vantage6-ui/new-frontend/src/styles.scss
+++ b/vantage6-ui/new-frontend/src/styles.scss
@@ -210,6 +210,7 @@ mat-card {
 
 .chip-container {
   display: flex;
+  flex-wrap: wrap;
   gap: $spacing-px-2;
 }
 
